--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
 html{
     scroll-behavior: smooth;
 }
+::selection{
+    background:rgb(142, 73, 232);
+    color: #fff;
+}
 
 /* custom scroll bar */
 
@@ -43,6 +47,7 @@ html{
 .navbar.sticky{
     padding: 15px 0;
     background: crimson;
+    box-shadow: -10px 10px 50px rgba(0,0,0.2);
 }
 .max-width{
     max-width: 1300px;
@@ -554,7 +559,7 @@ section .title::after{
 footer{
     background: lightblue;
     padding: 15px 23px;
-    color: #fff;
+    color: rgb(255, 255, 255);
     text-align: center;
     font-weight: 600;
 }
