--- a/style.css
+++ b/style.css
@@ -18,6 +18,54 @@ html{
     color: #fff;
 }
 
+/* custom pre-loader */
+
+.loader{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    z-index:9999;
+    align-items: center;
+    justify-content: center;
+    background: #000;
+    transition: all 0.5s;
+}
+.loader .ring h1{
+    color: #e5f403;
+    font-size: 25px
+}
+.loader .ring{
+    height: 155px;
+    width: 155px;
+    border: 7px solid #000;
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.loader .ring:after{
+    position: absolute;
+    content: "";
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    border: 5px solid #008aff;
+    border-top-color: transparent;
+    animation: rotate 1s linear infinite;
+}
+@keyframes rotate{
+    0%{
+        transform:rotate(0deg);
+        filter: hue-rotate(0deg);        
+    }
+    100%{
+      transform:rotate(360deg);
+      filter: hue-rotate(360deg);
+    }
+}
+
 /*custom scrollbar*/
 
 ::-webkit-scrollbar{
@@ -906,4 +954,3 @@ footer{
     padding: 5px;
   }
 } 
-
